# LinkedList

./: .gitignore  CMakeLists.txt  bigger_test  test.txt
.github/workflows/: main.yml
include/: LinkedList.h
src/: LinkedList.c
